uf-16264: Implement X-Sent-By header
